--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/BookStore_App/.vs/BookStore_App
+/BookStore_App/BookStore_App/bin/Debug/netcoreapp3.1
+/BookStore_App/BookStore_App/obj
